# secure_file_upload

apps/api/: pyproject.toml
apps/api/app/core/: settings.py
apps/api/app/db/: base.py  enums.py
apps/api/app/models/: file.py
apps/api/app/schemas/: file.py
apps/worker/: pyproject.tml
