[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-upload-api"
version = "0.1.0"
description = "Secure file upload gateway API"
requires-python = ">=3.11"

dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy>=2.0",
  "psycopg2-binary",
  "python-multipart",
  "pydantic>=2.0",
]
